--- a/Assets/Scripts/AceOfAberration.asmdef
+++ b/Assets/Scripts/AceOfAberration.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "AceOfAberration"
+    "name": "AceOfAberration",
+    "rootNamespace": "",
+    "references": [
+        "GUID:21d1eb854b91ade49bc69a263d12bee2"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
